# DashBeam

./: AppSettings.qml  CMakeLists.txt  CircleMeter.qml  ColorBar.qml  DashBeam.qmlproject.qtds  GearText.qml  Main.qml  README.md  SettingsPage.qml  ShiftLights.qml  SmoothRpmDisplay.qml  VerticalBar.qml  main.qml  qmlmodules
.github/workflows/: build.yml
android/: AndroidManifest.xml
imports/: CMakeLists.txt
imports/DashBeam/: CMakeLists.txt  qmldir
imports/DashBeam/designer/: plugin.metainfo
src/: NetInfo.cpp  NetInfo.h  SettingsManager.cpp  SettingsManager.h  UdpListener.cpp  UdpListener.h  import_qml_plugins.h  main.cpp
test_data/: bolide.json  hillclimb.json  test1.json  udp_test.py
